--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha utils/**.test.js",
-    "test-watch": "nodemon --exec 'npm test'"
+    "test-watch": "nodemon --exec 'npm test'",
+    "start" : "node sever.js"
+  },
+  "engines" : {
+      "npm": "^5.4.2",
+      "node": "^8.7.0"
   },
   "keywords": [
     "Nodejs",
