--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "test": "mocha utils/**.test.js",
     "test-watch": "nodemon --exec 'npm test'",
-    "start" : "node sever.js"
+    "start": "node sever.js"
   },
-  "engines" : {
-      "npm": "^5.4.2",
-      "node": "^8.7.0"
+  "engines": {
+    "npm": "^5.4.2",
+    "node": "^8.7.0"
   },
   "keywords": [
     "Nodejs",
@@ -35,6 +35,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.2.14",
     "passport": "^0.4.0",
+    "passport-custom": "^1.0.5",
     "passport-local": "^1.0.0",
     "socket.io": "^2.1.1"
   },
